# DAlgoViz

./: README.md  pyproject.toml
src/dalgoviz/: __init__.py  cli.py  laws.py  server.py
src/dalgoviz/algorithms/: __init__.py  lamport.py
src/dalgoviz/routes/: __init__.py  lamport.py  laws.py
src/dalgoviz/templates/: index.html
