[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dalgoviz"
version = "0.1.0"
description = "Interactive visualizer for distributed algorithms and scalability laws"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "flask>=3.0",
]

[project.scripts]
dalgoviz = "dalgoviz.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]
